<resources>
    <string name="app_name">Tumble</string>
    <string name="new_game">Start A New Game</string>
    <string name="scoreboard">My Scoreboard</string>
    <string name="main_menu">Main Menu</string>
    <string name="exit_app">EXIT</string>
    <string name="best_plays">BEST PLAYS</string>
    <string name="default_score">-----</string>
    <string name="word_formed">{Word Here}</string>
    <string name="score_of_word_formed">{+Score Here}</string>
    <string name="total_score">{Total}</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_registered">Already registered? Login Here</string>
    <string name="login_header">Login to your account</string>
    <string name="register_header">Create your new Tumble account</string>
    <string name="score_status_too_short">Word is too short</string>
    <string name="score_status_already_submitted">Word already submitted</string>
    <string name="score_status_not_a_word">Not a word</string>
    <string name="score_final">{Final Score}</string>
    <string name="game_over">Game Over</string>
    <string name="key_final_score">key_final_score</string>
</resources>