<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutCompat5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/constraint_layout"
        android:layout_alignParentTop="true"
        android:background="@drawable/activity_game_top_background"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_total_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total_score"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="24pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5">

                <ProgressBar
                    android:id="@+id/progressbar"
                    style="@android:style/Widget.Material.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:max="100"
                    android:progress="0" />

                <ProgressBar
                    android:id="@+id/progressbar2"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:max="100"
                    android:progress="0"
                    android:rotation="180" />
            </TableRow>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearLayoutCompat5"
            android:background="@drawable/game_board">

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/row1col1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row1col2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row1col3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row1col4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/row2col1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row2col2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row2col3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row2col4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/row3col1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row3col2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row3col3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row3col4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/row4col1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row4col2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row4col3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                    <ImageView
                        android:id="@+id/row4col4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cell" />

                </TableRow>
            </TableLayout>
        </RelativeLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayoutCompat4"
        android:background="@drawable/activity_game_middle_background"
        android:padding="25dp">

        <TextView
            android:id="@+id/tv_word_formed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/word_formed"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_score_formed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score_of_word_formed"
            android:textColor="@color/white"
            android:textSize="10pt"
            app:layout_constraintTop_toBottomOf="@+id/tv_word_formed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCompat4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/activity_game_bottom_background"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/AppCompatButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_white_logic"
            android:fontFamily="@font/lato"
            android:paddingTop="15dp"
            android:paddingBottom="25dp"
            android:text="@string/new_game"
            android:textAllCaps="false"
            android:textFontWeight="600"
            android:textSize="10pt" />

    </LinearLayout>

</RelativeLayout>
